Fix styles when the scrollbar was full page height

--- a/client/src/components/ProjectSidebar/styles.module.scss
+++ b/client/src/components/ProjectSidebar/styles.module.scss
@@ -3,10 +3,6 @@
 }
 
 .sidebar__container {
-  position: fixed;
-  left: 0;
-  top: 70px;
-  bottom: 0;
   width: 270px;
   margin: 0;
   border-right: 2px solid rgba(9,30,66,0.08);
